<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_title"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="43dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txStatus"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="112dp"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="154dp"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rbDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Done" />

        <RadioButton
            android:id="@+id/rbNotNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not Done" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txPriority"
        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="210dp"
        tools:ignore="MissingConstraints" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="253dp"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rbLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txLow" />

        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txMedium" />

        <RadioButton
            android:id="@+id/rbHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txHigh" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txTimeAndDate"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="320dp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--/--/----"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="352dp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--:--"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="342dp"
        tools:layout_editor_absoluteY="356dp" />

    <Button
        android:id="@+id/chooseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:text="Choose Date"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="379dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/chooseTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:text="Choose Time"
        tools:layout_editor_absoluteX="250dp"
        tools:layout_editor_absoluteY="384dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>